--- a/SpringbootRestAPIProject/src/main/resources/application.properties
+++ b/SpringbootRestAPIProject/src/main/resources/application.properties
@@ -1,1 +1,15 @@
 spring.application.name=SpringbootRestAPIProject
+spring.datasource.url=
+spring.datasource.username=
+spring.datasource.password=
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+
+debug=true
+server.port=9090
+
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql=TRACE
+
+management.endpoints.web.exposure.include=*
